<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('products', function (Blueprint $table) {
            $table->ulid('id')->primary();
            $table->string("name");
            $table->string("sku")->unique(); // stock keeping unit
            $table->decimal("price", 8, 2);
            // if related supplier is deleted, product's supplier_id will be null
            $table->foreignUlid("supplier_id")->nullable()->constrained("suppliers")->nullOnDelete();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('products');
    }
};
